[package]
name = "sse-borderland"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.6"
tokio = {version="1.31.0", features=["full"]}
tokio-stream = {version="0.1.17", features=["sync"]}
futures-util = "0.3.25"
serde = {version="1.0.152", features=["derive"]}
tower-http = { version = "0.6.6", features = ["cors"] }
tower = "0.5.2"
dotenv = "0.15.0"
